--- a/currencyexchange.html
+++ b/currencyexchange.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>From Europe to Japan!</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='currencyexchange.css'>
 
 </head>
 <body>
-<input type="text" id="input"></input>
-<button onclick="curEx()">Exchange!</button>
+<h1 class="badge-dark">From Europe to Japan! What's your money worth?</h1>
+<input type="text" id="input" placeholder="€nt€r €uro h€r€!"></input>
+<button class="btn btn-success" onclick="curEx()">Exchange!</button>
 <div id="output"></div>
 <script src='currencyexchange.js'></script>
 </body>
